--- a/wpsblog/wpsblog/templates/auth/login.html
+++ b/wpsblog/wpsblog/templates/auth/login.html
@@ -6,8 +6,9 @@
 
 <form action="{% url "auth:login" %}" method="POST">
   {% csrf_token %}
+  <input type="hidden" name="next_page" value={{ request.GET.next }}>
   <input type="text" name="username" placeholder="username" required>
   <input type="password" name="password" placeholder="password" required>
-  <input type="submit" value="로그인">
+  <input type="submit" value="회원가입">
 </form>
 {% endblock %}
