--- a/wpsblog/wpsblog/templates/auth/mypage.html
+++ b/wpsblog/wpsblog/templates/auth/mypage.html
@@ -2,15 +2,40 @@
 
 
 {% block content %}
-<h1>My page</h1>
-
+<h1>My Page</h1>
 <p>{{ request.user.username }} 의 마이페이지 입니다.</p>
-<h2> 내가 쓴 글 ({{ request.user.post_set.count }})</h2>  
-  <ul>
-    {% for post in request.user.post_set.all %}
-    <li>
-      <a href="{% url "posts:detail" post_id=post.id %}">{{ post.title }}</a>
-    </li>
+
+
+<h2>나의 bitlink ( {{ request.user.bitlink_set.count }} )</h2>
+<ul>
+  {% for bitlink in request.user.bitlink_set.all %}
+  <li>
+    <a href="{{ bitlink.get_absolute_url }}" target="_blank">{{ bitlink.original_url }} ( {{ bitlink.shorten_hash }} )</a>
+  </li>
   {% endfor %}
-  </ul>
+</ul>
+
+
+<h2>내가 쓴 글 ( {{ request.user.post_set.count }} )</h2>
+<ul>
+  {% for post in request.user.post_set.all %}
+  <li>
+    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+  </li>
+  {% endfor %}
+</ul>
+
+
+<h2>내가 쓴 댓글 ( {{ request.user.comment_set.count }} )</h2>
+<ul>
+  {% for comment in request.user.comment_set.all %}
+  <li>
+    <p>
+      <a href="{{ comment.get_absolute_url }}">{{ comment.content }}</a>
+      on
+      <a href="{{ comment.post.get_absolute_url }}">{{ comment.post.title }}</a>
+    </p>
+  </li>
+  {% endfor %}
+</ul>
 {% endblock %}
