--- a/wpsblog/wpsblog/templates/posts/list.html
+++ b/wpsblog/wpsblog/templates/posts/list.html
@@ -2,13 +2,13 @@
 
 
 {% block content %}
-<h1>Posts List</h1>
+<h1>Posts List ( {{ posts | length }} )</h1>
 
 <ul>
   {% for post in posts %}
     <li>
       <img src="{{ post.get_image_url }}" alt="{{ post.title }}">
-      <a href="{% url "posts:detail" post_id=post.id %}">
+      <a href="{% url "posts:detail" pk=post.id %}">
         <h2>{{ post.title }} <span>({{ post.comment_set.count }})</span></h2>
       </a>
       <p>{{ post.content }}</p>
